--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <h1>Welcome To Student Portal </h1> 
 <p>Go To Platform for accessing all your academic projects in single place</p>
+<form>
+  <label for="name">Name:</label>
+  <input id="name">
+</form>
