--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <h1>Welcome To Student Portal </h1> 
 <p>Go To Platform for accessing all your academic projects in single place</p>
 <form>
-  <label for="name">Name:</label>
-  <input id="name">
+  <div> 
+  <label for="userName">UserName:</label>
+  <input id="userName">
+    </div>
+  <div>
+     <label for="password">Password:</label>
+  <input id="password">
+  </div>
 </form>
